--- a/demo/app/index.html
+++ b/demo/app/index.html
@@ -8,6 +8,13 @@
   </head>
   <body>
     <div id="app"></div>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&lang=en" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,400i,500,700,700i"
+      rel="stylesheet"
+      >
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
   </body>
 </html>
